# UnifAI

./: .coderabbit.yaml  .gitignore  .gitmodules  Code Review - Second Round  Dockerfile-faulty  LICENSE  README.md  all-in-1.compose.yaml  ass.txt  launch.json  package-lock.json  package.json  prompt_lab.reviewer.yaml  tasks.json  unifai-helm.tgz  vllm.compose.yaml
multi-agent/: CUSTOM_PHASE_EXAMPLES.md  DEBUG_FEATURES_SUMMARY.md  Dockerfile  README.md  SIMPLE_PHASE_DESIGN.md  entrypoint.sh  hermes.py  mcp_client.py  mcp_server.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
multi-agent/actions/: __init__.py  service.py
multi-agent/actions/common/: __init__.py  action_models.py  base_action.py
multi-agent/actions/registry/: action_discoverer.py  action_registry.py
multi-agent/adapters/temporal/: client.py  models.py
multi-agent/agent/: __init__.py
multi-agent/agent/execution/: __init__.py
multi-agent/agent/parsers/: base.py
multi-agent/agents/: base_agent.py  jira_agent.py  pdf_agent.py  slack_agent.py
multi-agent/api/flask/: app.py  decorators.py  flask_app.py
multi-agent/blueprints/: resolver.py  serializers.py  service.py
multi-agent/blueprints/loader/: json_blueprint_loader.py  yaml_blueprint_loader.py
multi-agent/blueprints/models/: __init__.py  blueprint.py  typing.py
multi-agent/blueprints/repository/: mongo_blueprint_repository.py  repository.py
multi-agent/blueprints/validation/: __init__.py  collector.py
multi-agent/bootstrap/: cli.py  container.py
multi-agent/catalog/: CARD_SERVICE_README.md  __init__.py  actions_service.py  dto.py  element_definition.py  element_registry.py  service.py  spec_discoverer.py
multi-agent/composers/: agent_composer.py  node_factory.py  plan_composer.py  tool_wrapper_composer.py
multi-agent/condition/: base_condition.py  threshold_condition.py
multi-agent/condition/models/: base_condition.py
multi-agent/config/: app_config.py
multi-agent/core/: app_container.py  context.py  contracts.py  dto.py  element_card_builder.py  enums.py  field_hints.py  models.py  run_context.py  types.py
multi-agent/core/channels/: __init__.py  protocols.py
multi-agent/core/iem/: factory.py  interfaces.py  messenger.py  models.py  packets.py  payloads.py  utils.py
multi-agent/core/ref/: __init__.py  models.py  remapper.py  walker.py
multi-agent/docs/architecture/: ARCHITECTURE.md  SESSION_MANAGEMENT.md
multi-agent/elements/common/: action_models.py  actions.py  base_element_spec.py  base_factory.py  exceptions.py  validator.py
multi-agent/engine/: base_graph_builder.py  factory.py  langgraph_builder.py  models.py
multi-agent/examples/: agent_integration_example.py  clean_models_example.py  clean_tool_management_example.py  enhanced_executor_example.py  tool_executor_example.py
multi-agent/graph/: blueprint_loader.py  graph_plan.py  graph_state.py  graph_utils.py  models.py  plan_builder.py  rt_graph_plan.py  service.py  step.py  step_context.py
multi-agent/llms/: base_llm.py  llamastack_llm.py  mock_llm.py  openai_llm.py
multi-agent/logs/: in_memory_logger.py  log_context.py  log_viewer.py  logger_interface.py  structured_file_logger.py
multi-agent/modifiers/: graph_modifier.py
multi-agent/nodes/: aggregator.py  base_node.py  conditional_router.py  coordinator.py  critic.py  discussion.py  exit_condition.py  final_answer.py  llm_merger.py  user_question.py
multi-agent/plugins/: base_factory.py  decorators.py  exceptions.py  plugin_registry.py
multi-agent/providers/: blueprints.py  mcp_client.py
multi-agent/registry/: __init__.py  element_definition.py  element_registry.py  user_registry.py
multi-agent/resources/: errors.py  models.py  registry.py  service.py
multi-agent/retrievers/: base_retriever.py  docs_retriever.py  slack_retriever.py
multi-agent/run/: app.py  blueprint_2orch_jira_conf.yml  blueprint_SDJ.yml  blueprint_a2a_agent.yml  blueprint_jira_agent.yml  blueprint_jira_confluence.yml  blueprint_llm_agent.yml  blueprint_mcp_agent.yml  blueprint_orch_jira.yml  blueprint_orch_jira_conf.yml  blueprint_orch_jira_conf_doc_slack.yml  blueprint_ssh_agent.yml  boolean_router_demo.yml  branch_router_demo.yml  dev.py  main.py  run_loop.py  test_1_agent_2_mcp_providers.yml  test_1_agent_add_tool.yml  test_1_agent_mcp_tool.yml  test_1_agent_mcp_tool_proxy.yml  test_1_agent_ssh_exec_tool.yml  test_1_agents_docs_retriever.yml  test_1_agents_slack_retriever.yml  test_2_agents_1_merge.yml  test_2_agents_SD.yml  test_2_agents_slack_conf.yml  test_2_agents_slack_docs_merger.yml  test_3_agents_SDJ.yml  test_4_agents_SDJG.yml  test_llm.yml  test_mock_agent.yml  test_new_version.yml  test_new_version_recursive_ref.yml  test_playground.py  wsgi.py
multi-agent/schemas/: agent_config.py  blueprint_schema.py  llm_config.py  node_config.py  tool_config.py
multi-agent/scripts/: migrate_doc_retrievers.py
multi-agent/session/: dto.py  element_builder.py  exceptions.py  lifecycle.py  models.py  service.py  session_executor.py  session_registry.py  user_session_manager.py  utils.py  workflow_session.py  workflow_session_factory.py
multi-agent/sharing/: __init__.py  cleanup_job.py  cloner.py  models.py  service.py
multi-agent/state/: graph_saver.py  graph_state_serializer.py  runtime_builder.py  runtime_context.py  runtime_state.py
multi-agent/statistics/: __init__.py  models.py  service.py
multi-agent/templates/: __init__.py  errors.py  service.py
multi-agent/temporal/: __main__.py  activities.py  client.py  graph_models.py  graph_node_activities.py  graph_workflow.py  models.py  session_workflow.py  worker.py  workflow.py
multi-agent/tests/: EDGE_CASES.md  EDGE_CASE_FIXES.md  ORCHESTRATOR_TEST_PLAN.md  PRODUCTION_READY_TEST_SUMMARY.md  README.md  TESTING_INFRASTRUCTURE.md  conftest.py
multi-agent/tools/: addition_tool.py  base_tool.py  calculator_tool.py  converter.py  division_tool.py  mcp_tool.py  mcp_tool_adapter.py  ssh_exec.py  weather_tool.py
multi-agent/validation/: README.md  __init__.py  models.py  service.py
(+3016 files in other folders)
